--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,8 @@
     "axios": "^1.6.8",
     "postcss": "^8.4.38",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-simple-typewriter": "^5.0.1"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.13",
