--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,8 @@
     "postcss": "^8.4.38",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.23.1",
+    "react-router-hash-link": "^2.4.3",
     "react-simple-typewriter": "^5.0.1"
   },
   "devDependencies": {
